# deckmaste.rs

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  cite-config.json  clippy.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
crates/deckmaste_cards/: Cargo.toml
crates/deckmaste_cards/src/: cli.rs  deck.rs  expand.rs  graduate.rs  lib.rs  macros.rs  main.rs  plugin.rs  strategy.rs  validate.rs
crates/deckmaste_cards/src/render/: ability.rs  card.rs  condition.rs  deontic.rs  effect.rs  fragment.rs  keyword.rs  mod.rs  replacement.rs  template.rs
crates/deckmaste_cards/src/template/: index.rs  mod.rs  pattern.rs
crates/deckmaste_cards/tests/: attach_subtypes.rs  builtin.rs  canon.rs  classification.rs  keywords.rs  render.rs  testing.rs  tokens.rs  validate_builtin.rs
crates/deckmaste_core/: Cargo.toml
crates/deckmaste_core/src/: ability.rs  action.rs  binder.rs  card.rs  color.rs  condition.rs  continuous.rs  cost.rs  count.rs  counter.rs  de_util.rs  decision.rs  deontic.rs  designation.rs  effect.rs  event.rs  expansion.rs  filter.rs  ident.rs  keyword.rs  lib.rs  mana.rs  plugin.rs  property.rs  quantity.rs  reference.rs  replacement.rs  ron.rs  sba_rule.rs  selection.rs  status.rs  strategy.rs  subtype.rs  symbol.rs  target_spec.rs  temporal.rs  token.rs  type.rs  zone.rs
crates/deckmaste_engine/: Cargo.toml
crates/deckmaste_engine/benches/: full_game.rs
crates/deckmaste_engine/examples/: full_game_1k.rs
crates/deckmaste_engine/src/: activate.rs  agenda.rs  cast.rs  combat.rs  condition.rs  cost_options.rs  decide.rs  derive.rs  event.rs  history.rs  layer.rs  legal.rs  lib.rs  lki.rs  object.rs  player.rs  player_statics.rs  render.rs  replace.rs  replace_registry.rs  resolve.rs  runner.rs  sba.rs  sim.rs  stack.rs  state.rs  step.rs  strategy.rs  tally.rs  target.rs  test_support.rs  trigger.rs  turn.rs  zone.rs
crates/deckmaste_engine/tests/: activate.rs  combat.rs  enumerate.rs  full_game.rs  layers.rs  mana_riders.rs  pip_payment.rs  replace_registry.rs  skeleton.rs  stack.rs  x_costs.rs
crates/deckmaste_migrations/: Cargo.toml
crates/deckmaste_migrations/src/: cli.rs  extract.rs  graduate.rs  ident.rs  layout.rs  lib.rs  main.rs  resolve.rs  ron_output.rs  todo_card.rs
crates/deckmaste_migrations/src/data/: academyruins.rs  mod.rs  mtgjson.rs  rules.rs  scryfall.rs
crates/deckmaste_migrations/src/migrations/: _000_keyword_ability_todos.rs  _001_keyword_action_todos.rs  _002_ability_word_todos.rs  _003_subtypes.rs  _004_card_todos.rs  _005_basic_lands.rs  _006_vanilla_creatures.rs  _007_simple_lands.rs  _008_french_vanilla_creatures.rs  _009_simple_mana_rocks.rs  _010_simple_mana_dorks.rs  card_todo.rs  creature_face.rs  keyword_ability.rs  keyword_todos.rs  mana_ability.rs  mod.rs
crates/deckmaste_migrations/src/parsers/: activated_ability.rs  cost.rs  count.rs  effect.rs  filter.rs  keyword_ability.rs  macro_template.rs  mana_ability.rs  mod.rs  modal.rs  modify.rs  replacement.rs  spell_ability.rs  static_ability.rs  triggered_ability.rs
crates/deckmaste_migrations/src/stubs/: ability_word_todos.rs  keyword_ability_todos.rs  keyword_action_todos.rs  keyword_todos.rs  mod.rs  subtypes.rs
crates/deckmaste_tui/: Cargo.toml  README.md
crates/deckmaste_tui/src/: app.rs  driver.rs  game.rs  interact.rs  lib.rs  main.rs  shortcuts.rs  ui.rs
crates/deckmaste_tui/src/ui/: board.rs  detail.rs  format.rs  mod.rs  zones.rs
crates/macro_ron/: Cargo.toml
crates/macro_ron/src/: expand.rs  expansion.rs  ident.rs  kind.rs  lib.rs  param.rs  set.rs  support.rs  tests.rs  traverse.rs
crates/macro_ron_derive/: Cargo.toml
crates/macro_ron_derive/src/: generate.rs  input.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: card.rs  citations.rs  cite.rs  cr.rs  extract.rs  generate.rs  graduate.rs  legacy.rs  lib.rs  main.rs  migrate.rs  resolve.rs  stubs.rs  validate.rs
crates/xtask/src/cite/: citations.rs  cr.rs  legacy.rs  lockfile.rs
crates/xtask/tests/: check.rs
crates/xtask/tests/fixtures/: cr_fixture.txt
docs/: architecture-review.md  card-data.md  conformance.md  engine-adrs.md  publish-prep.md  rules-taxonomy.md  skill-loop.md  todo.md
docs/superpowers/plans/: 2026-06-06-basic-lands-migration.md  2026-06-06-cost-and-action.md  2026-06-06-expansion-memory.md  2026-06-06-selection-complex.md
docs/superpowers/specs/: 2026-06-06-basic-lands-migration-design.md  2026-06-06-core-building-blocks-design.md
docs/tickets/: README.md  census.md
docs/tickets/critical/: core-each-batch-workitems.md  engine-cost-payment.md  engine-counters-api.md  engine-crew-battlefield-zone-guard.md  engine-delayed-reflexive-triggers.md  engine-find-moved-object.md  engine-protection-prevention.md  engine-replacements.md  engine-resolve-count-x.md  engine-trigger-limits.md  engine-x-costs.md  layers-layer-4-subtypes.md
docs/tickets/done/: cards-maypay-mustpay-verb-person.md  cards-remodel-bindable.md  core-binder-bindable-gap.md  core-filter-atom-parity.md  core-modification-ops.md  core-move-destinations.md  core-pip-payment.md  core-quantity-range.md  engine-ability-walk-dedup.md  engine-activated-abilities.md  engine-cause-constructors.md  engine-citys-blessing.md  engine-count-eval-unify.md  engine-count-source-zone-scope.md  engine-counter-ability.md  engine-deontic-polarities.md  engine-layers-1-3.md  (+45 more)
idris/: Main.idr  VERIFY.md  mtg.ipkg
idris/scripts/: build  jj
idris/src/: Cards.idr  Core.idr  Experimental.idr  Macros.idr  Ron.idr  Spec.idr
scripts/: build_corpus_index.py  derive_data.fish  fetch_data  fetch_data.fish  fmt  gen_card_stubs.sh  gen_card_stubs.sql  jj  jq  jq_all.fish  migrate_citations.fish  run_migrations.fish  split_card_stubs.py  tui-pilot  workflow
scripts/hooks/: jj_guard.fish
scripts/lib/: setup.fish  todo_graph.pl
scripts/migrations/: 000_keyword_ability_todos.fish  001_keyword_action_todos.fish  002_ability_word_todos.fish  003_subtypes.fish  004_card_todos.fish
src/: bootstrap.rs  main.rs
tests/: todo_test.fish
tests/tickets/: census.md
(+514 files in other folders)
