[package]
name = "deckmaste_cards"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive"] }
deckmaste_core = { version = "0.1.0", path = "../deckmaste_core" }
macro_ron = { version = "0.1.0", path = "../macro_ron" }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
