[package]
name = "deckmaste_cards"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.102" }
deckmaste_core = { version = "0.1.0", path = "../deckmaste_core" }
macro_ron = { version = "0.1.0", path = "../macro_ron" }
regex = "1.12.3"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3.27.0"
