[package]
name = "deckmaste_engine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
deckmaste_core = { version = "0.1.0", path = "../deckmaste_core" }
rand = "0.10.1"
rand_chacha = "0.10.0"

[dev-dependencies]
deckmaste_cards = { version = "0.1.0", path = "../deckmaste_cards" }
criterion = "0.8"
rayon = "1"

[[bench]]
name = "full_game"
harness = false
