[package]
name = "deckmaste_migrations"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive"] }
deckmaste_cards = { path = "../deckmaste_cards" }
deckmaste_core = { path = "../deckmaste_core" }
regex = "1.12.3"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
