[package]
name = "deckmaste_tui"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
deckmaste_core = { version = "0.1.0", path = "../deckmaste_core" }
deckmaste_cards = { version = "0.1.0", path = "../deckmaste_cards" }
deckmaste_engine = { version = "0.1.0", path = "../deckmaste_engine" }
anyhow = "1.0.102"
ratatui = "0.29"
